--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "ava": "^6.1.3",
+    "compression": "^1.7.4",
     "express": "^4.21.0",
     "express-yup-middleware": "^1.2.4",
     "helmet": "^7.1.0",
