--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "ava": "^6.1.3",
     "compression": "^1.7.4",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.0",
     "express-yup-middleware": "^1.2.4",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "pino": "^9.4.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
